--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 </div>
             </div>
         </div>
-        
+        <div class="quote">
+            <q><cite> is an inspiring quote, or a testimonial from a
+                customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who knows? All | know
+                is that it looks nice.</cite></q> <figcaption>-Thor, Lord of Thunder</figcaption>
+        </div>
     </body>
 </html>
