--- a/index.html
+++ b/index.html
@@ -67,5 +67,8 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <p>Copyright Ozan Yurdakul, The Odin Project 2022</p>
+        </div>
     </body>
 </html>
